appId: com.omre.app.posh
---
- launchApp:
    clearState: false
- assertVisible: "For You"
- tapOn: "Open navigation menu"
- tapOn: "Virtual World"
- assertVisible: "VIRTUAL CIVIC INTERFACE"
- assertVisible: "BRIDGE THE PHYSICAL GAP."
- assertVisible: "Step into digital embassies"
- assertVisible: "Find Organization"
- assertVisible: "Watch Live Session"
- assertVisible: "ACTIVE HUB SESSIONS"
- assertVisible: "99.9% UPTIME"
- assertNotVisible: "Welcome back"
- scroll
- assertVisible: "ACTIVE HUBS"
- assertVisible: "Global embassies open for interaction"
- assertVisible: "All"
- assertVisible: "Government"
- assertVisible: "NGO"
- assertVisible: "UN Global Headquarters"
- assertVisible: "1240 Citizens Online"
- assertVisible: "ENTER HUB"
- assertVisible: "Greenpeace"
- assertVisible: "850 Citizens"
- assertVisible: "ACTIVE LEGISLATION"
- assertVisible: "LIVE GLOBAL POLLS."
- assertVisible: "2027 Nairobi Peace Summit Venue"
- assertVisible: "VOTE NOW"
- tapOn: "Government"
- assertVisible: "Government"
- tapOn: "NGO"
- assertVisible: "NGO"
- tapOn: "All"
- assertVisible: "All"
- swipe:
    direction: DOWN
- assertVisible: "BRIDGE THE PHYSICAL GAP."
- pressKey: Back
- assertVisible: "For You"
